# ai-01

./: Tema1_IA_ID_Gavrila_Andrei-Gabriel.ipynb  Tema1_IA_ID_Nume_Prenume.ipynb  Tema2_IA_ID_Gavrila_Andrei-Gabriel.ipynb  pyproject.toml
