[tool.poetry]
name = "ai-01"
version = "0.0.1"
description = "AI 01"
authors = ["Andrei Gavrila <andrei.gavrila@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.4"
loguru = "^0.7.2"
numpy = ">=1.22,<2.1"
numba = "^0.60.0"

[tool.poetry.group.dev.dependencies]
notebook = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
